testsuite/tests/linear/should_fail/LinearAsPat.hs
{-# LANGUAGE LinearTypes #-}

module LinearAsPat where

shouldFail :: Bool ->. Bool
shouldFail x@True = x
